--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>annotations</artifactId>
             <version>24.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>codes.laivy</groupId>
+            <artifactId>java-address</artifactId>
+            <version>1.2.1</version>
+        </dependency>
     </dependencies>
 
 </project>
